tests/bad/bad040.lat
class string {
    int a;
}

int main () { return 42; }